--- a/.gitignore
+++ b/.gitignore
@@ -251,4 +251,6 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
+### Yolo
+*.weights
 # End of https://www.toptal.com/developers/gitignore/api/androidstudio
